...
  'confirm_delivery_illustration',
  'confirm_delivery_subtitle',
  'confirm_delivery_title',
  'customer_profile_avatar',
  'customer_profile_contact_row',
  'customer_profile_error_signin_cta',
  'customer_profile_language_row',
  'customer_profile_load_error',
  'customer_profile_loading',
  'customer_profile_logout_row',
  'customer_profile_name',
  'customer_profile_notifications_row',
  'customer_profile_rate_app_row',
  'customer_profile_rate_app_unavailable',
  'customer_profile_rating',
  'customer_profile_refresh_error',
  'customer_profile_register_delivery_row',
  'customer_profile_retry_cta',
...
  'diagnostics_disabled',
  'diagnostics_error',
  'diagnostics_loading',
  'diagnostics_retry',
  'diagnostics_screen_root',
  'diagnostics_sessions_empty',
  'dispute_auto_attach_note',
  'dispute_back',
  'dispute_error',
  'dispute_error_exit_cta',
  'dispute_error_retry_cta',
  'dispute_evidence_empty',
  'dispute_evidence_error',
  'dispute_evidence_loading',
  'dispute_photos',
  'dispute_photos_add_cta',
  'dispute_photos_error',
  'dispute_reason',
  'dispute_root',
  'dispute_status_back',
  'dispute_status_error',
  'dispute_status_evidence_empty',
  'dispute_status_evidence_partial',
  'dispute_status_evidence_summary',
  'dispute_status_history',
  'dispute_status_history_empty',
  'dispute_status_loading',
  'dispute_status_outcome',
  'dispute_status_refresh_error',
  'dispute_status_retry_cta',
  'dispute_status_root',
  'dispute_status_state',
  'dispute_status_stepper',
  'dispute_status_support',
  'dispute_submit_cta',
  'dispute_submitting',
  'dispute_support_link',
  'dispute_upload_progress',
  'dispute_voice',
  'dispute_voice_error',
  'dm_onboarding_back',
  'dm_onboarding_continue',
  'dm_onboarding_error_snack',
  'dm_onboarding_out_of_coverage_note',
  'dm_onboarding_photo_upload_area',
...
  'kyc_wizard_retry_cta',
  'kyc_wizard_root',
  'kyc_wizard_schema_error',
  'kyc_wizard_schema_loading',
  'kyc_wizard_status_error',
  'kyc_wizard_tos_error',
  'language_arabic_option',
  'language_back',
  'language_english_option',
  'language_settings_root',
  'language_sync_pending_note',
  'live_settings_error',
  'live_settings_loading',
  'live_settings_retry_cta',
  'live_settings_sign_out_cta',
  'login_social_apple',
...
  'mutual_rating_error',
  'mutual_rating_loading',
  'mutual_rating_ratee_avatar',
  'mutual_rating_stars',
  'notif_perm_dismiss',
  'notif_perm_enable',
  'notif_prefs_back',
  'notif_prefs_load_error',
  'notif_prefs_loading',
  'notif_prefs_marketing_toggle',
  'notif_prefs_offers_toggle',
  'notif_prefs_order_status_toggle',
  'notif_prefs_push_only_note',
  'notif_prefs_retry_cta',
  'notif_prefs_root',
  'notif_prefs_save_error_snack',
  'notif_prefs_save_failed_note',
  'notif_prefs_transactional_lock_icon',
  'notif_prefs_wallet_toggle',
  'notification_permission_prompt',
  'notifications_back',
  'notifications_cached_note',
  'notifications_cannot_open',
  'notifications_empty',
  'notifications_error',
...
  'settings_unregister_jeeber',
  'shell_exit_confirm_snack',
  'shell_tab_dashboard',
  'shell_tab_deliver',
  'shell_tab_delivery',
  'shell_tab_earnings',
  'shell_tab_profile',
  'shell_tab_requests',
  'social_collision_sheet',
  'social_collision_sheet_dismiss_cta',
  'social_signin_error_snack',
  'super_login_plus_button',
  'super_login_plus_picker',
  'super_login_plus_picker_error',
...
  'support_error_signin_cta',
  'support_reply_attach',
  'support_reply_attach_error',
  'support_reply_send',
  'support_reply_upload_progress',
  'support_retry_cta',
  'support_root',
  'support_submit_cta',
  'support_submitting',
  'support_success',
  'support_success_done_cta',
  'support_thread_back',
  'support_thread_closed',
...
  'tracking_root',
  'tracking_status_panel',
  'tracking_stepper',
  'tracking_stream_retry_cta',
  'tracking_stream_unavailable',
  'tracking_under_review_state',
  'txn_detail',
  'txn_detail_amount',
  'txn_detail_back',
  'txn_detail_dispute_link',
  'txn_detail_error',
  'txn_detail_exit_cta',
  'txn_detail_fee_percentage_label',
  'txn_detail_fee_rate',
  'txn_detail_loading',
  'txn_detail_order_link',
  'txn_detail_order_ref',
  'txn_detail_pinned_price',
  'txn_detail_retry_cta',
  'txn_detail_root',
  'txn_detail_type_label',
  'txn_detail_type_summary',
  'unregister_jeeber_cancel_cta',
  'unregister_jeeber_confirm_cta',
  'unregister_jeeber_confirm_sheet',
  'voice_request_back',
  'voice_request_blocked_state',
...
  'waiting_terminal_home_cta',
  'waiting_terminal_state',
  'walkthrough_get_started_cta',
  'walkthrough_next_cta',
  'walkthrough_skip_cta',
  'wallet_activity_back',
  'wallet_activity_empty',
  'wallet_activity_error',
  'wallet_activity_exit_cta',
  'wallet_activity_load_more',
  'wallet_activity_load_more_error',
  'wallet_activity_load_more_retry',
  'wallet_activity_loading',
  'wallet_activity_refresh_failed_note',
  'wallet_activity_retry_cta',
  'wallet_activity_root',
  'wallet_activity_unrenderable_note',
  'wallet_affordability_card',
  'wallet_available_balance',
  'wallet_back',
  'wallet_cash_disclaimer',
  'wallet_earnings_row',
...
